test/error/syntax/err1.rzy

Err1 = Component
  out : signal();
  inp : slot();
  
elementary
  inp : slot()
    out.foo();      // .foo does not exist
  end
  
end

